--- a/E-commerce Backend/e-commerce/src/main/resources/application.properties
+++ b/E-commerce Backend/e-commerce/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+app.client.url=http://localhost:4200/login
